# csv-duckbd-dbt

./: Makefile  README.md  pyproject.toml
data/: input.csv
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/bronze/: schema.yml
dbt_project/models/gold/: avg_price_by_manufacturer_year.sql  car_mileage_segments.sql  gold_models.yml
dbt_project/models/silver/: stg_cars.sql  stg_cars.yml
dbt_project/models/transform/: schema.yml  transform.sql
duckdb/: database.duckdb
ingestao/: pipeline.py
streamlit/: app.py
