[project]
name = "dbt_duckdb_rag"
version = "0.1.0"
description = ""
authors = [
    {name = "WesAssis",email = "wassisskt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "duckdb (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
